--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="./scripts/code.js"></script>
     <title>Assignment3</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
 </head>
 
