--- a/public/search.html
+++ b/public/search.html
@@ -9,6 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./scripts/search.js"></script>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+
     <style>
         #search {
             width: 80px;
