--- a/public/shoppingcart.html
+++ b/public/shoppingcart.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Assignment3</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
 </head>
 
