--- a/public/search.html
+++ b/public/search.html
@@ -105,7 +105,7 @@
         <a href="/timeline.html" id="Historypage">
             History
         </a>
-        <a href="/shoppingcart.html" id="Historypage">
+        <a href="/shoppingcart.html">
             Cart
         </a>
     </nav>
