--- a/public/shoppingcart.html
+++ b/public/shoppingcart.html
@@ -27,7 +27,7 @@
         <a href="./timeline.html" id="Historypage">
             History
         </a>
-        <a href="./shoppingcart.html" id="Historypage">
+        <a href="./shoppingcart.html">
             Cart
         </a>
     </nav>
