Added account page and session

--- a/public/shoppingcart.html
+++ b/public/shoppingcart.html
@@ -18,14 +18,14 @@
     </header>
 
     <nav>
-        <a href="./index.html" id="Homepage">
+        <a href="./home.html" id="Homepage">
             Home
         </a>
         <a href="./search.html" id="Searchpage">
             Search
         </a>
         <a href="./timeline.html" id="Historypage">
-            History
+            Account
         </a>
         <a href="./shoppingcart.html">
             Cart
