--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Log in/ Sign up</title>
+    <!-- Bootstrap Library CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FontAwesome Library -->
+    <script src="https://kit.fontawesome.com/3972ff60ea.js" crossorigin="anonymous"></script>
+
+    <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./scripts/home.js"></script>
-    <title>Assignment3</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
-</head>
+    <link rel="stylesheet" href="./styles/home.css">
+  </head>
+  <body>
 
-<body>
-    <header>
-        <img src="./banner.jpeg" height="40%" alt="banner">
-    </header>
+    <div class="login_form">
+        <!-- LOGIN FORM -->
+        <form class="needs-validation" action="/login" method="POST" id="loginForm">
+            <div class="form-title mb-3">
+                <h3>Pokemon Shop Login</h3>
+            </div>
 
-    <nav>
-        <a href="./index.html" id="Homepage">
-            Home
-        </a>
-        <a href="./search.html" id="Searchpage">
-            Search
-        </a>
-        <a href="./timeline.html" id="Historypage">
-            History
-        </a>
-        <a href="./shoppingcart.html">
-            Cart
-        </a>
-    </nav>
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control" name="email" id="email" placeholder="Email" required="required">
+                <label for="email" class="form-label">Email address</label>
+            </div>
 
-    <main>
+            <div class="form-floating mb-3">
+                <input type="password" class="form-control" name="password" id="password" placeholder="Password" required="required">
+                <label for="password" class="form-label">Password</label>
+            </div>
 
-    </main>
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary btn-block">Log in</button>
+            </div>
 
-    <footer>
-        <h5>
-            Copyright © Adam Website 2022
-        </h5>
-    </footer>
+            <br>
 
-</body>
+            <p>or sign in with</p>
 
+            <div class="social_login">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-github"></i></i></a>
+            </div>
+
+            <div id="signup">
+                Don't have an account? <a href="./register.html">Create account</a>
+            </div>
+
+        </form>
+    </div>
+  </body>
 </html>
