--- a/public/search.html
+++ b/public/search.html
@@ -96,14 +96,14 @@
     </header>
 
     <nav>
-        <a href="/index.html" id="Homepage">
+        <a href="./home.html" id="Homepage">
             Home
         </a>
         <a href="/search.html" id="Searchpage">
             Search
         </a>
         <a href="/timeline.html" id="Historypage">
-            History
+            Account
         </a>
         <a href="/shoppingcart.html">
             Cart
